--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-reanimated": "^3.1.0",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-svg": "^13.9.0",
     "styled-components": "^5.3.10"
   },
