feat: NextForecast card creation

--- a/ios/climaAtual/Info.plist
+++ b/ios/climaAtual/Info.plist
@@ -56,6 +56,8 @@
 		<string>SFProDisplayBold.ttf</string>
 		<string>SFProDisplayRegular.ttf</string>
 		<string>SFProDisplaySemibold.ttf</string>
+		<string>AlegreyaSansBold.ttf</string>
+		<string>AlegreyaSansMedium.ttf</string>
 	</array>
 </dict>
 </plist>
