--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.0.6",
+    "@react-native-community/netinfo": "^9.3.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-linear-gradient": "^2.6.2",
